Add PWA icons and meta tags

--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<link rel="manifest" href="/beLive/manifest.webmanifest">
+  <meta name="theme-color" content="#6366f1">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <link rel="apple-touch-icon" href="/beLive/img/icon-192.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=0.5, maximum-scale=0.5, user-scalable=no">
     <title>beLive - Трансляции для музыкантов</title>
-    <link rel="manifest" href="/manifest.json"> <!-- Добавлено для PWA -->
     <link rel="icon" href="data:, ">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/transport-controls.css">
