Add landscape orientation lock for mobile

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>beLive - Трансляции для музыкантов</title>
     <link rel="icon" href="data:, ">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/orientation-lock.css">
     <link rel="stylesheet" href="css/transport-controls.css">
     <link rel="stylesheet" href="css/karaoke-styles.css">
     <link rel="stylesheet" href="css/block-type-markers.css">
@@ -1119,5 +1120,6 @@
     <div id="belive-ai-picker" class="belive-model-picker hidden">
       <div class="model-list"></div>
     </div>
+    <script src="js/orientation-lock.js"></script>
 </body>
 </html> 
